force-app/main/default/objects/Affiliated_Contact__c/Affiliated_Contact__c.object-meta.xml
<CustomObject>
    <label>Affiliated Contact</label>
    <nameField>
        <displayFormat>AFC-{00000}</displayFormat>
        <label>Affiliated Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliated Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>