force-app/main/default/objects/Affiliated_Contact__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <label>Updated</label>
    <type>Date</type>
</CustomField>